관리자 페이지 필터링 로그 출력 수정